# desktop-pet

./: .commit_msg  .gitignore  main.js  package-lock.json  package.json  preload.js  start-dev.bat  start.bat  web-demo.html
assets/: pet-manifest.json
scripts/: gen-ico.js  gen-icons.js  scan-assets.js
src/: app.js  chat-ui.js  constants.js  index.html  llm-client.js  persona.js  pet.js  renderer.js  settings-panel.js  side-hide.js  speech.js  stats.js  style.css  toolbar.js  utils.js  work-system.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  commands.rs  lib.rs  main.rs  tray_icon.rs
src-tauri/src/ai/: llm_client.rs  mod.rs  persona.rs
src-tauri/src/animation/: food_animation.rs  graph_core.rs  mod.rs  pet_loader.rs  png_animation.rs
src-tauri/src/core/: controller.rs  game_core.rs  game_save.rs  mod.rs  touch_area.rs
src-tauri/src/logic/: main_logic.rs  mod.rs
src-tauri/src/systems/: food.rs  mod.rs  stats.rs  walk.rs  work.rs
src/ai/: ai-settings.js  chat-ui.js  llm-client.js  persona.js
src/animation/: anim-types.js  graph-core.js  png-loader.js
src/core/: controller.js  game-core.js
src/display/: effects.js  message-bar.js  renderer.js
src/pet/: pet-logic.js
src/systems/: stats.js  work.js
src/ui/: side-hide.js  toolbar.js
src/utils/: constants.js  helpers.js
